feat: paystack impl

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,8 @@ rabbitmq:
   email:
     queue: email.queue
 
+paystack:
+  base-url: https://api.paystack.co
+  secret-key: ${PAYSTACK_SECRET}
+
+
