--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-	</dependencies>
+	
+ 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.0-jre</version>
+		</dependency>
+ </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
