fix: health check

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: hotel-services
   config:
-    import: optional:configserver:http://localhost:8098/
+    import: configserver:http://config:8098/
   mail:
     host: smtp.gmail.com
     port: 587
@@ -14,6 +14,7 @@ spring:
           auth: true
           starttls:
             enable: true
+            
 app:
   jwtSecret: "${JWT_SECRET}"
   jwtExpirationMS: 7200000
@@ -31,5 +32,21 @@ rabbitmq:
 paystack:
   base-url: https://api.paystack.co
   secret-key: ${PAYSTACK_SECRET}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  health:
+    readiness:
+      enabled: true
+    liveness:
+      enabled: true
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      show-details: always
 
 
